--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-promise-middleware": "^6.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
